crates/ruff_linter/src/rules/ruff/snapshots/ruff_linter__rules__ruff__tests__RUF007_RUF007.py.snap
---
source: crates/ruff_linter/src/rules/ruff/mod.rs
---
RUF007.py:16:1: RUF007 (zip-instead-of-pairwise) Prefer `itertools.pairwise()` over `zip()` when iterating over successive pairs
   |
15 | # Errors
16 | zip(input, input[1:])
   | ^^^ RUF007 (zip-instead-of-pairwise)
17 | zip(input, input[1::1])
18 | zip(input[:-1], input[1:])
   |
   = help: Replace `zip()` with `itertools.pairwise()`

RUF007.py:17:1: RUF007 (zip-instead-of-pairwise) Prefer `itertools.pairwise()` over `zip()` when iterating over successive pairs
   |
15 | # Errors
16 | zip(input, input[1:])
17 | zip(input, input[1::1])
   | ^^^ RUF007 (zip-instead-of-pairwise)
18 | zip(input[:-1], input[1:])
19 | zip(input[1:], input[2:])
   |
   = help: Replace `zip()` with `itertools.pairwise()`

RUF007.py:18:1: RUF007 (zip-instead-of-pairwise) Prefer `itertools.pairwise()` over `zip()` when iterating over successive pairs
   |
16 | zip(input, input[1:])
17 | zip(input, input[1::1])
18 | zip(input[:-1], input[1:])
   | ^^^ RUF007 (zip-instead-of-pairwise)
19 | zip(input[1:], input[2:])
20 | zip(input[1:-1], input[2:])
   |
   = help: Replace `zip()` with `itertools.pairwise()`

RUF007.py:19:1: RUF007 (zip-instead-of-pairwise) Prefer `itertools.pairwise()` over `zip()` when iterating over successive pairs
   |
17 | zip(input, input[1::1])
18 | zip(input[:-1], input[1:])
19 | zip(input[1:], input[2:])
   | ^^^ RUF007 (zip-instead-of-pairwise)
20 | zip(input[1:-1], input[2:])
21 | list(zip(input, input[1:]))
   |
   = help: Replace `zip()` with `itertools.pairwise()`

RUF007.py:20:1: RUF007 (zip-instead-of-pairwise) Prefer `itertools.pairwise()` over `zip()` when iterating over successive pairs
   |
18 | zip(input[:-1], input[1:])
19 | zip(input[1:], input[2:])
20 | zip(input[1:-1], input[2:])
   | ^^^ RUF007 (zip-instead-of-pairwise)
21 | list(zip(input, input[1:]))
22 | list(zip(input[:-1], input[1:]))
   |
   = help: Replace `zip()` with `itertools.pairwise()`

RUF007.py:21:6: RUF007 (zip-instead-of-pairwise) Prefer `itertools.pairwise()` over `zip()` when iterating over successive pairs
   |
19 | zip(input[1:], input[2:])
20 | zip(input[1:-1], input[2:])
21 | list(zip(input, input[1:]))
   |      ^^^ RUF007 (zip-instead-of-pairwise)
22 | list(zip(input[:-1], input[1:]))
23 | zip(foo[:-1], foo[1:], strict=True)
   |
   = help: Replace `zip()` with `itertools.pairwise()`

RUF007.py:22:6: RUF007 (zip-instead-of-pairwise) Prefer `itertools.pairwise()` over `zip()` when iterating over successive pairs
   |
20 | zip(input[1:-1], input[2:])
21 | list(zip(input, input[1:]))
22 | list(zip(input[:-1], input[1:]))
   |      ^^^ RUF007 (zip-instead-of-pairwise)
23 | zip(foo[:-1], foo[1:], strict=True)
24 | zip(foo[:-1], foo[1:], strict=False)
   |
   = help: Replace `zip()` with `itertools.pairwise()`

RUF007.py:23:1: RUF007 (zip-instead-of-pairwise) Prefer `itertools.pairwise()` over `zip()` when iterating over successive pairs
   |
21 | list(zip(input, input[1:]))
22 | list(zip(input[:-1], input[1:]))
23 | zip(foo[:-1], foo[1:], strict=True)
   | ^^^ RUF007 (zip-instead-of-pairwise)
24 | zip(foo[:-1], foo[1:], strict=False)
25 | zip(foo[:-1], foo[1:], strict=bool(foo))
   |
   = help: Replace `zip()` with `itertools.pairwise()`

RUF007.py:24:1: RUF007 (zip-instead-of-pairwise) Prefer `itertools.pairwise()` over `zip()` when iterating over successive pairs
   |
22 | list(zip(input[:-1], input[1:]))
23 | zip(foo[:-1], foo[1:], strict=True)
24 | zip(foo[:-1], foo[1:], strict=False)
   | ^^^ RUF007 (zip-instead-of-pairwise)
25 | zip(foo[:-1], foo[1:], strict=bool(foo))
   |
   = help: Replace `zip()` with `itertools.pairwise()`

RUF007.py:25:1: RUF007 (zip-instead-of-pairwise) Prefer `itertools.pairwise()` over `zip()` when iterating over successive pairs
   |
23 | zip(foo[:-1], foo[1:], strict=True)
24 | zip(foo[:-1], foo[1:], strict=False)
25 | zip(foo[:-1], foo[1:], strict=bool(foo))
   | ^^^ RUF007 (zip-instead-of-pairwise)
   |
   = help: Replace `zip()` with `itertools.pairwise()`
