crates/ruff_linter/src/rules/ruff/snapshots/ruff_linter__rules__ruff__tests__RUF102_RUF102.py.snap
---
source: crates/ruff_linter/src/rules/ruff/mod.rs
---
RUF102.py:18:12: RUF102 (noqa-by-code) [*] Noqa directive lists rule codes instead of rule names: E741 (ambiguous-variable-name), F841 (unused-variable)
   |
16 | def f():
17 |     # These should both be converted, but the comment should be left as-is (including spacing beforehand)
18 |     I = 1  # noqa: E741 F841  comment
   |            ^^^^^^^^^^^^^^^^^ RUF102 (noqa-by-code)
   |
   = help: Use rule names in noqa directive

ℹ Safe fix
15 15 | 
16 16 | def f():
17 17 |     # These should both be converted, but the comment should be left as-is (including spacing beforehand)
18    |-    I = 1  # noqa: E741 F841  comment
   18 |+    I = 1  # noqa: ambiguous-variable-name, unused-variable  comment
19 19 | 
20 20 | 
21 21 | def f():

RUF102.py:28:12: RUF102 (noqa-by-code) [*] Noqa directive lists rule codes instead of rule names: F841 (unused-variable)
   |
26 | def f():
27 |     # `F841` should be converted to `unused-variable`.
28 |     I = 1  # noqa: ambiguous-variable-name, F841
   |            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ RUF102 (noqa-by-code)
   |
   = help: Use rule names in noqa directive

ℹ Safe fix
25 25 | 
26 26 | def f():
27 27 |     # `F841` should be converted to `unused-variable`.
28    |-    I = 1  # noqa: ambiguous-variable-name, F841
   28 |+    I = 1  # noqa: ambiguous-variable-name, unused-variable
29 29 | 
30 30 | 
31 31 | def f():

RUF102.py:33:12: RUF102 (noqa-by-code) [*] Noqa directive lists rule codes instead of rule names: F841 (unused-variable)
   |
31 | def f():
32 |     # `F841` should be converted to `unused-variable`.
33 |     I = 1  # noqa: ambiguous-variable-name, F841
   |            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ RUF102 (noqa-by-code)
   |
   = help: Use rule names in noqa directive

ℹ Safe fix
30 30 | 
31 31 | def f():
32 32 |     # `F841` should be converted to `unused-variable`.
33    |-    I = 1  # noqa: ambiguous-variable-name, F841
   33 |+    I = 1  # noqa: ambiguous-variable-name, unused-variable
