crates/ruff_linter/src/rules/ruff/snapshots/ruff_linter__rules__ruff__tests__prefer_parentheses_getitem_tuple.snap
---
source: crates/ruff_linter/src/rules/ruff/mod.rs
---
RUF031_prefer_parens.py:8:5: RUF031 (incorrectly-parenthesized-tuple-in-subscript) [*] Use parentheses for tuples in subscripts.
   |
 6 |   )]
 7 |   d[
 8 |       1,
   |  _____^
 9 | |     2
   | |_____^ RUF031 (incorrectly-parenthesized-tuple-in-subscript)
10 |   ]
11 |   d[(2,4)]
   |
   = help: Parenthesize the tuple.

ℹ Safe fix
5  5  |     2
6  6  | )]
7  7  | d[
8     |-    1,
9     |-    2
   8  |+    (1,
   9  |+    2)
10 10 | ]
11 11 | d[(2,4)]
12 12 | d[(5,6,7)]

RUF031_prefer_parens.py:16:3: RUF031 (incorrectly-parenthesized-tuple-in-subscript) [*] Use parentheses for tuples in subscripts.
   |
14 | d[tuple(1,2)]
15 | d[tuple(8)]
16 | d[1,2]
   |   ^^^ RUF031 (incorrectly-parenthesized-tuple-in-subscript)
17 | d[3,4]
18 | d[5,6,7]
   |
   = help: Parenthesize the tuple.

ℹ Safe fix
13 13 | d[(8,)]
14 14 | d[tuple(1,2)]
15 15 | d[tuple(8)]
16    |-d[1,2]
   16 |+d[(1,2)]
17 17 | d[3,4]
18 18 | d[5,6,7]
19 19 | e = {((1,2),(3,4)):"a"}

RUF031_prefer_parens.py:17:3: RUF031 (incorrectly-parenthesized-tuple-in-subscript) [*] Use parentheses for tuples in subscripts.
   |
15 | d[tuple(8)]
16 | d[1,2]
17 | d[3,4]
   |   ^^^ RUF031 (incorrectly-parenthesized-tuple-in-subscript)
18 | d[5,6,7]
19 | e = {((1,2),(3,4)):"a"}
   |
   = help: Parenthesize the tuple.

ℹ Safe fix
14 14 | d[tuple(1,2)]
15 15 | d[tuple(8)]
16 16 | d[1,2]
17    |-d[3,4]
   17 |+d[(3,4)]
18 18 | d[5,6,7]
19 19 | e = {((1,2),(3,4)):"a"}
20 20 | e[((1,2),(3,4))]

RUF031_prefer_parens.py:18:3: RUF031 (incorrectly-parenthesized-tuple-in-subscript) [*] Use parentheses for tuples in subscripts.
   |
16 | d[1,2]
17 | d[3,4]
18 | d[5,6,7]
   |   ^^^^^ RUF031 (incorrectly-parenthesized-tuple-in-subscript)
19 | e = {((1,2),(3,4)):"a"}
20 | e[((1,2),(3,4))]
   |
   = help: Parenthesize the tuple.

ℹ Safe fix
15 15 | d[tuple(8)]
16 16 | d[1,2]
17 17 | d[3,4]
18    |-d[5,6,7]
   18 |+d[(5,6,7)]
19 19 | e = {((1,2),(3,4)):"a"}
20 20 | e[((1,2),(3,4))]
21 21 | e[(1,2),(3,4)]

RUF031_prefer_parens.py:21:3: RUF031 (incorrectly-parenthesized-tuple-in-subscript) [*] Use parentheses for tuples in subscripts.
   |
19 | e = {((1,2),(3,4)):"a"}
20 | e[((1,2),(3,4))]
21 | e[(1,2),(3,4)]
   |   ^^^^^^^^^^^ RUF031 (incorrectly-parenthesized-tuple-in-subscript)
22 | 
23 | token_features[
   |
   = help: Parenthesize the tuple.

ℹ Safe fix
18 18 | d[5,6,7]
19 19 | e = {((1,2),(3,4)):"a"}
20 20 | e[((1,2),(3,4))]
21    |-e[(1,2),(3,4)]
   21 |+e[((1,2),(3,4))]
22 22 | 
23 23 | token_features[
24 24 |     (window_position, feature_name)

RUF031_prefer_parens.py:26:3: RUF031 (incorrectly-parenthesized-tuple-in-subscript) [*] Use parentheses for tuples in subscripts.
   |
24 |     (window_position, feature_name)
25 | ] = self._extract_raw_features_from_token
26 | d[1,]
   |   ^^ RUF031 (incorrectly-parenthesized-tuple-in-subscript)
27 | d[(1,)]
28 | d[()] # empty tuples should be ignored
   |
   = help: Parenthesize the tuple.

ℹ Safe fix
23 23 | token_features[
24 24 |     (window_position, feature_name)
25 25 | ] = self._extract_raw_features_from_token
26    |-d[1,]
27 26 | d[(1,)]
   27 |+d[(1,)]
28 28 | d[()] # empty tuples should be ignored
29 29 | 
30 30 | d[:,] # slices in the subscript lead to syntax error if parens are added
